# botscript-server

./: .gitignore  .gitmodules  .pkg  CMakeLists.txt  README.md  botscript-db.sh  generate_content_header.py  prepare_android.sh
.github/workflows/: unix.yml  windows.yml
cmake/: arm.toolchain.cmake  c_flag_overrides.cmake
external_lib/http_server/: mime_types.cpp
external_lib/kyotocabinet-1.2.76/: CMakeLists.txt
external_lib/websocketpp/: CMakeLists.txt
external_lib/websocketpp/src/: endpoint.hpp  websocket_frame.hpp
external_lib/websocketpp/src/messages/: data.hpp
jni_src/net/makielski/botscript/: BotscriptServer.java  TestMain.java
mac_os_res/: Info.plist  makielskisbotIcon.icns
mac_res/makielskisbot-mac.app/Contents/: Info.plist
mac_res/makielskisbot-mac.app/Contents/MacOS/: makielskisbot-mac
mac_res/makielskisbot-mac.app/Contents/Resources/Base.lproj/: MainMenu.nib
src/: allowed_users_parser.cc  allowed_users_parser.h  bot_manager.cc  bot_manager.h  botscript_server_version.h  botscript_server_version.h.in  botserver_handler.cc  botserver_handler.h  bs_server.cc  bs_server.h  bs_server_options.cc  bs_server_options.h  config.h  config_store.h  contents.h  db_bot_config.cc  db_bot_config.h  dust_config.cc  dust_config.h  dust_server_options.cc  dust_server_options.h  error.cc  error.h  file_config_store.cc  file_config_store.h  main.cc  make_unique.h  message.cc  message.h  net_makielski_botscript_BotscriptServer.cpp  noexcept.h  service.cc  service.h  session.h  user.cc  user.h  ws_server.cc  ws_server.h  ws_server_options.cc  ws_server_options.h
src/c_api/: botscript_server.cc  botscript_server.h
src/conf/: bs_server_options.cc  bs_server_options.h  configuration.h  dust_server_options.cc  dust_server_options.h  options_parser.cc  options_parser.h  ws_server_options.cc  ws_server_options.h
src/jni/: net_makielski_botscript_BotscriptServer.cpp  net_makielski_botscript_BotscriptServer.h
src/messages/: account_msg.cc  account_msg.h  all_messages.h  bots_msg.cc  bots_msg.h  failure_msg.cc  failure_msg.h  incoming_msg.h  incoming_msgs.h  login_msg.cc  login_msg.h  message.h  outgoing_msgs.h  packages_msg.cc  packages_msg.h  rapidjson_with_exception.h  register_msg.cc  register_msg.h  session_msg.cc  session_msg.h  success_msg.cc  success_msg.h  update_msg.cc  update_msg.h
src/messages/account/login/: password_login_msg.cc  password_login_msg.h  session_login_msg.cc  session_login_msg.h
src/messages/outgoing/: account_msg.cc  account_msg.h  bots_msg.cc  bots_msg.h  failure_msg.cc  failure_msg.h  outgoing_msg.h  packages_msg.cc  packages_msg.h  session_msg.cc  session_msg.h  success_msg.h  update_msg.h
src/messages/user/: user_msg.cc  user_msg.h
src/messages/user/bot/: create_bot_msg.cc  create_bot_msg.h  delete_bot_msg.cc  delete_bot_msg.h  execute_bot_msg.cc  execute_bot_msg.h  reactivate_bot_msg.cc  reactivate_bot_msg.h
src/messages/user/update/: delete_update_msg.cc  delete_update_msg.h  email_update_msg.cc  email_update_msg.h  password_update.cc  password_update.h  password_update_msg.cc  password_update_msg.h
src/operations/: all_ops.h  login_op.cc  login_op.h  operation.h  register_op.cc  register_op.h
src/operations/user/: user_op.cc  user_op.h
src/operations/user/bot/: bot_util.cc  bot_util.h  create_bot_op.cc  create_bot_op.h  create_new_bot_op.cc  create_new_bot_op.h  delete_bot_op.cc  delete_bot_op.h  execute_bot_op.cc  execute_bot_op.h  reactivate_bot_op.cc  reactivate_bot_op.h
src/operations/user/update/: delete_update_op.cc  delete_update_op.h  email_update_op.cc  email_update_op.h  password_update_op.cc  password_update_op.h
src/qtgui/: BotThread.cpp  BotThread.h  Window.cpp  Window.h  main.cpp
src/qtgui/res/: systray.qrc
src/storage/: callback.h  config_store.h  db_config_store.cc  db_config_store.h  db_user_store.cc  db_user_store.h  desktop_user_store.cc  desktop_user_store.h  file_config_store.cc  file_config_store.h  kc_wrapper.h  user_store.h
src/win32gui/: Resource.aps  Resource.rc  TrayIcon.cc  TrayIcon.cpp  TrayIcon.h  guicon.cc  guicon.h  main.cc  main.cc~
src/win32gui/res/: Resource.rc  bot.aps  bot.rc  resource.h
test/: allowed_users_parser_test.cpp  bot_manager_test.cpp  db_bot_config_test.cpp  db_config_store_test.cpp  db_user_store_test.cpp  error_test.cpp  multi_index_test.cpp  outgoing_messages_test.cpp  rapid_json_exception_test.cpp  user_bot_config_test.cpp  user_test.cpp
win_res/: config.ini
